Feature id annotation strategy

--- a/5_Annotation.ipynb
+++ b/5_Annotation.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, \"clean\" the feature table:"
+    "First,import the feature table:"
    ]
   },
   {
@@ -30,6 +30,9 @@
     "DF_features=DF_features.set_index([\"mz\", \"RT\"])\n",
     "DF_features= DF_features.drop(columns=[\"charge\", \"quality\", \"id\"])\n",
     "DF_features= DF_features.fillna(0)\n",
+    "DF_features[\"id_list\"]= DF_features[\"id_list\"].str.replace(r\"{|}|'\", \"\")\n",
+    "for i, rows in DF_features.iterrows():\n",
+    "    DF_features[\"id_list\"][i]= DF_features[\"id_list\"][i].split(\",\")\n",
     "DF_features"
    ]
   },
@@ -355,8 +358,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_formulas = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"formulas_*.csv\"))\n",
-    "input_structures = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"structures_*.csv\"))"
+    "input_formulas = glob.glob(os.path.join(\"results\", \"Sirius\", \"formulas_*.csv\"))\n",
+    "input_structures = glob.glob(os.path.join(\"results\", \"Sirius\", \"structures_*.csv\"))"
    ]
   },
   {
@@ -379,6 +382,7 @@
     "    s= df[\"opt_global_rank\"]\n",
     "    pd.to_numeric(s)\n",
     "    df= df.loc[df[\"opt_global_rank\"]==1]\n",
+    "    df= df.rename(columns={\"opt_global_featureId\":\"featureId\"})\n",
     "    df_score=df.filter(regex=fr\"Score\")\n",
     "    df_opt=df.filter(regex=fr\"opt\")\n",
     "    cols_score= df_score.columns\n",
@@ -395,26 +399,28 @@
     "\n",
     "df_singletons= df_singletons.set_index(\"formulas\")\n",
     "idx= df_singletons.index\n",
-    "df_sirius= df_formulas.drop(idx)\n",
-    "new_df= pd.DataFrame()\n",
-    "df= pd.DataFrame()\n",
-    "idx= df_sirius.index\n",
-    "for i, index in enumerate(idx):\n",
-    "    new_index= new_df.index\n",
-    "    if index not in new_index:\n",
-    "        s= df_sirius.iloc[i]\n",
-    "        new_df= new_df.append(s)\n",
-    "    else:\n",
-    "        mz_0= df_sirius[\"mz\"][i]\n",
-    "        mz_1= new_df[\"mz\"][index]\n",
-    "        time_0= df_sirius[\"RT\"][i]\n",
-    "        time_1= new_df[\"RT\"][index]\n",
-    "        mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
-    "        maxdeltaRT = time_0 + 30.0\n",
-    "        mindeltaRT = time_0 - 30.0\n",
-    "        if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 10.0):\n",
-    "            pass\n",
-    "        else:\n",
+    "df_sirius= df_formulas.drop(idx) #drop the singletons and keep the duplicated formulas\n",
+    "new_df= pd.DataFrame() #create new, empty DF\n",
+    "df= pd.DataFrame() #create new, empty DF\n",
+    "idx= df_sirius.index #index of DF with duplicates\n",
+    "for i, index in enumerate(idx): #parse through the index\n",
+    "    new_index= new_df.index #create a new index\n",
+    "    if index not in new_index: #if the old index is not already appended in the new one:\n",
+    "        s= df_sirius.iloc[i] #get the whole row of the old DF\n",
+    "        new_df= new_df.append(s) #and append it to the new DF\n",
+    "    else: #if it already is then check if the features are identical (Delta mz<10ppm, Delta RT+- 30s)\n",
+    "        for j, mz_1, time_1 in zip(new_df.index, new_df[\"mz\"], new_df[\"RT\"]):\n",
+    "            ids=[]\n",
+    "            for mz_0, time_0, id_0 in zip(df_sirius[\"mz\"], df_sirius[\"RT\"], df_sirius[\"featureId\"]):\n",
+    "                mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
+    "                maxdeltaRT = time_0 + 30.0\n",
+    "                mindeltaRT = time_0 - 30.0\n",
+    "                if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 10.0):\n",
+    "                    id= id_0\n",
+    "                    if id not in ids:\n",
+    "                        ids.append(id)\n",
+    "            new_df[\"featureId\"][j] = \" , \".join(ids) #if they are identical, append the feature ids only under the featureId column \n",
+    "        else: #if they are not identical\n",
     "            m= df_sirius.iloc[i]\n",
     "            df= df.append(m)\n",
     "\n",
@@ -422,6 +428,9 @@
     "DF_SIRIUS_final= pd.concat([DF_SIRIUS, df_singletons], axis=0)\n",
     "DF_SIRIUS_final= DF_SIRIUS_final.reset_index()\n",
     "DF_SIRIUS_final= DF_SIRIUS_final.rename(columns={\"index\":\"formulas\"})\n",
+    "DF_SIRIUS_final[\"featureId\"]= DF_SIRIUS_final[\"featureId\"].str.replace(r\"id_\", \"\")\n",
+    "for i, rows in DF_SIRIUS_final.iterrows():\n",
+    "    DF_SIRIUS_final[\"featureId\"][i]= DF_SIRIUS_final[\"featureId\"][i].split(\",\")\n",
     "DF_SIRIUS_final.to_csv(os.path.join(\"results\", \"annotations\", \"SIRIUS_library.csv\"), sep=\"\\t\", index=None)\n",
     "DF_SIRIUS_final"
    ]
@@ -444,6 +453,7 @@
     "    df= pd.read_csv(formulas, index_col=\"Unnamed: 0\")\n",
     "    df= df.loc[df[\"opt_global_rank\"]==1]\n",
     "    df_score=df.filter(regex=fr\"best_search_engine_score\")\n",
+    "    df= df.rename(columns={\"opt_global_featureId\":\"featureId\"})\n",
     "    df_opt=df.filter(regex=fr\"opt\")\n",
     "    cols_score= df_score.columns\n",
     "    cols_opt= df_opt.columns\n",
@@ -472,36 +482,31 @@
     "    if index not in new_index:\n",
     "        s= df_CSI.iloc[i]\n",
     "        new_df= new_df.append(s)\n",
-    "    else:\n",
-    "        #print(index)\n",
-    "        mz_0= df_CSI[\"exp_mass_to_charge\"][i]\n",
-    "        mz_1= new_df[\"exp_mass_to_charge\"][index]\n",
-    "        time_0= df_CSI[\"retention_time\"][i]\n",
-    "        time_1= new_df[\"retention_time\"][index]\n",
-    "        #(print(mz_0, time_0, mz_1, time_1))\n",
-    "        mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
-    "        maxdeltaRT = time_0 + 30.0\n",
-    "        mindeltaRT = time_0 - 30.0\n",
-    "        if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 10.0):\n",
-    "            pass\n",
-    "        else:\n",
+    "    else: #if it already is then check if the features are identical (Delta mz<10ppm, Delta RT+- 30s)\n",
+    "        for j, mz_1, time_1 in zip(new_df.index, new_df[\"mz\"], new_df[\"RT\"]):\n",
+    "            ids=[]\n",
+    "            for mz_0, time_0, id_0 in zip(df_CSI[\"mz\"], df_CSI[\"RT\"], df_CSI[\"featureId\"]):\n",
+    "                mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
+    "                maxdeltaRT = time_0 + 30.0\n",
+    "                mindeltaRT = time_0 - 30.0\n",
+    "                if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 10.0):\n",
+    "                    id= id_0\n",
+    "                    if id not in ids:\n",
+    "                        ids.append(id)\n",
+    "            new_df[\"featureId\"][j] = \" , \".join(ids) #if they are identical, append the feature ids only under the featureId column \n",
+    "        else: #if they are not identical\n",
     "            m= df_CSI.iloc[i]\n",
     "            df= df.append(m)\n",
-    "\n",
     "\n",
     "DF_CSI= pd.concat([new_df, df], axis=0)\n",
     "DF_CSI_final= pd.concat([DF_CSI, df_singletons], axis=0)\n",
     "DF_CSI_final= DF_CSI_final.reset_index()\n",
     "DF_CSI_final= DF_CSI_final.rename(columns={\"index\":\"formulas\"})\n",
+    "DF_CSI_final[\"featureId\"]= DF_CSI_final[\"featureId\"].str.replace(r\"id_\", \"\")\n",
+    "for i, rows in DF_CSI_final.iterrows():\n",
+    "    DF_CSI_final[\"featureId\"][i]= DF_CSI_final[\"featureId\"][i].split(\",\")\n",
     "DF_CSI_final.to_csv(os.path.join(\"results\", \"annotations\", \"CSI_library.csv\"), sep=\"\\t\", index= None)\n",
     "DF_CSI_final"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Annotate the formulas and structural predictions to the feature matrix according to SIRIUS and CSI (you can also only choose the feature matrix with unknown features generated above):"
    ]
   },
   {
@@ -510,8 +515,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF_features= pd.read_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\"), sep=\"\\t\")\n",
+    "DF_features= DF_features.reset_index()\n",
     "DF_features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotate the formulas and structural predictions to the feature matrix according to SIRIUS and CSI:"
    ]
   },
   {
@@ -525,20 +537,20 @@
     "DF_features.insert(0, \"CSI_predictions_smiles\", \"\")\n",
     "\n",
     "\n",
-    "for i, mz, rt in zip(DF_features.index, DF_features[\"mz\"], DF_features[\"RT\"]):\n",
+    "for i, id in zip(DF_features.index, DF_features[\"id_list\"]):\n",
     "    hits1 = []\n",
     "    hits2= []\n",
     "    hits3=[]\n",
-    "    for name, smiles, formula, Pred_mz, Pred_rt, in zip(DF_CSI_final[\"description\"], DF_CSI_final[\"smiles\"], DF_CSI_final[\"formulas\"], DF_CSI_final[\"exp_mass_to_charge\"], DF_CSI_final[\"retention_time\"]):\n",
-    "        mass_delta = (abs(Pred_mz-mz)/Pred_mz)*1000000.0 if Pred_mz != 0 else 0\n",
-    "        if (Pred_rt >= rt-30.0) & (Pred_rt <= rt+30.0) & (mass_delta<= 10.0):\n",
-    "            hit1 = f\"{name}\"\n",
-    "            hit2 = f\"{formula}\"\n",
-    "            hit3= f\"{smiles}\"\n",
-    "            if hit1 not in hits1:\n",
-    "                hits1.append(hit1)\n",
-    "                hits2.append(hit2)\n",
-    "                hits3.append(hit3)\n",
+    "    for name, smiles, formula, CSI_ids in zip(DF_CSI_final[\"description\"], DF_CSI_final[\"smiles\"], DF_CSI_final[\"formulas\"], DF_CSI_final[\"featureId\"]):\n",
+    "        for x in id:\n",
+    "            if x in CSI_ids:\n",
+    "                hit1 = f\"{name}\"\n",
+    "                hit2 = f\"{formula}\"\n",
+    "                hit3= f\"{smiles}\"\n",
+    "                if hit1 not in hits1:\n",
+    "                    hits1.append(hit1)\n",
+    "                    hits2.append(hit2)\n",
+    "                    hits3.append(hit3)\n",
     "    DF_features[\"CSI_predictions_name\"][i] = \" ## \".join(hits1)\n",
     "    DF_features[\"CSI_predictions_formula\"][i] = \" ## \".join(hits2)\n",
     "    DF_features[\"CSI_predictions_smiles\"][i] = \" ## \".join(hits3)\n",
@@ -553,15 +565,15 @@
    "source": [
     "DF_features.insert(0, \"SIRIUS_predictions\", \"\")\n",
     "\n",
-    "for i, mz, rt in zip(DF_features.index, DF_features[\"mz\"], DF_features[\"RT\"]):\n",
+    "for i, id in zip(DF_features.index, DF_features[\"id_list\"]):\n",
     "    hits = []\n",
-    "    for name, Pred_mz, Pred_rt, in zip(DF_SIRIUS_final[\"formulas\"], DF_SIRIUS_final[\"mz\"], DF_SIRIUS_final[\"RT\"]):\n",
-    "        mass_delta = (abs(Pred_mz-mz)/Pred_mz)*1000000.0 if Pred_mz != 0 else 0\n",
-    "        if (Pred_rt >= rt-30.0) & (Pred_rt <= rt+30.0) & (mass_delta<= 10.0):\n",
-    "            hit = f\"{name}\"\n",
-    "            if hit not in hits:\n",
-    "                hits.append(hit)\n",
-    "    DF_features[\"SIRIUS_predictions\"][i] = \" ## \".join(hits)\n",
+    "    for name, Pred_id in zip(DF_SIRIUS_final[\"formulas\"], DF_SIRIUS_final[\"featureId\"]): \n",
+    "        for x in id:\n",
+    "            if x in Pred_id:\n",
+    "                hit = f\"{name}\"\n",
+    "                if hit not in hits:\n",
+    "                    hits.append(hit)\n",
+    "        DF_features[\"SIRIUS_predictions\"][i] = \" ## \".join(hits)\n",
     "DF_features"
    ]
   },
@@ -573,6 +585,13 @@
    "source": [
     "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"FeatureMatrix_SIRIUS_CSI.csv\"), sep=\"\\t\", index= None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
