--- a/6_Data_analysis_extras.ipynb
+++ b/6_Data_analysis_extras.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path= os.path.join(\"results\", \"interim\", \"analysis\")\n",
+    "path= os.path.join(\"pyOpenMS_old_results\", \"data_analysis\", \"tables_big_data\")\n",
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)"
@@ -244,7 +244,7 @@
     "\n",
     "# As always with the sklearn package, we first have to create and save\n",
     "# a function \"object\":\n",
-    "pca = PCA(n_components=4)\n",
+    "pca = PCA(n_components=3)\n",
     "\n",
     "# We can actually use this function object to get the first 4 principle\n",
     "# components of any data. Let's do it for our data:\n",
@@ -279,33 +279,6 @@
     "#volcano plots\n",
     "# So now we see empirical evidence that the sum of all 4 variances\n",
     "# equals the total variance in the data set (shown by the orange line) :)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pca import pca\n",
-    "\n",
-    "# Initialize to reduce the data up to the number of componentes that explains 95% of the variance.\n",
-    "model = pca(n_components=0.95)\n",
-    "\n",
-    "# Or reduce the data towards 2 PCs\n",
-    "model = pca(n_components=2)\n",
-    "\n",
-    "# Fit transform\n",
-    "results = model.fit_transform(Matrix_standardized)\n",
-    "\n",
-    "# Plot explained variance\n",
-    "fig, ax = model.plot()\n",
-    "\n",
-    "# Scatter first 2 PCs\n",
-    "fig, ax = model.scatter()\n",
-    "\n",
-    "# Make biplot with the number of features\n",
-    "fig, ax = model.biplot(n_feat=4)"
    ]
   },
   {
@@ -414,7 +387,7 @@
     "X_std = StandardScaler().fit_transform(X)\n",
     "\n",
     "# Call the PCA method with 50 components. \n",
-    "pca = PCA(n_components=5)\n",
+    "pca = PCA(n_components=2)\n",
     "pca.fit(X_std)\n",
     "X_5d = pca.transform(X_std)"
    ]
@@ -504,8 +477,9 @@
    "outputs": [],
    "source": [
     "lower_val= pd.read_csv(os.path.join(path, \"lower_val.csv\"), sep=\"\\t\")\n",
-    "Matrix_scaled= pd.merge(Matrix_scaled, lower_val, on=\"Feature_ID\")\n",
-    "Matrix_scaled= Matrix_scaled.set_index(\"Feature_ID\")\n",
+    "lower_val= lower_val.rename(columns={\"0\":\"rarest_features\"})\n",
+    "Matrix_scaled= pd.merge(Matrix_standardized, lower_val, on=[\"mz\", \"RT\"])\n",
+    "Matrix_scaled= Matrix_scaled.set_index([\"mz\", \"RT\"])\n",
     "Matrix_scaled= Matrix_scaled.round(decimals=5)\n",
     "Matrix_scaled"
    ]
@@ -516,7 +490,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Matrix_standardized=Matrix_standardized.set_index(\"Feature_ID\")\n",
+    "Matrix_standardized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix_standardized=Matrix_standardized.set_index([\"mz\", \"RT\"])\n",
     "cols= Matrix_standardized.columns\n",
     "outliers=Matrix_scaled\n",
     "\n",
