--- a/3_SIRIUS_CSI.ipynb
+++ b/3_SIRIUS_CSI.ipynb
@@ -139,7 +139,7 @@
     "                        no_mt_info, \n",
     "                        compound_info)\n",
     "\n",
-    "            out_csifingerid = os.path.join(path, \"structures_\" + os.path.basename(filename)[19:-5] +\".mzTab\")\n",
+    "            out_csifingerid = os.path.join(path, \"structures_\" + os.path.basename(filename)[11:-5] +\".mzTab\")\n",
     "            executable = shutil.which(\"sirius\")\n",
     "            subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n",
     "                                                    String(sirius_tmp.getTmpOutDir()),\n",
@@ -154,7 +154,7 @@
     "                                candidates,\n",
     "                                sirius_result)\n",
     "\n",
-    "            sirius_file= os.path.join(path,\"formulas_\" + os.path.basename(filename)[7:-5] +\".mzTab\")\n",
+    "            sirius_file= os.path.join(path,\"formulas_\" + os.path.basename(filename)[11:-5] +\".mzTab\")\n",
     "            siriusfile.store(sirius_file, sirius_result)"
    ]
   },
@@ -198,6 +198,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "path = os.path.join(\"results\", \"Sirius\")\n",
+    "if not os.path.exists(path): # if it doesn't exist\n",
+    "    os.mkdir(path) # create a path directory\n",
+    "\n",
     "input_SIRIUS_files = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"formulas_*.mzTab\"))\n",
     "for filename in input_SIRIUS_files:\n",
     "    sirius=  pyteomics.mztab.MzTab(filename, encoding=\"UTF8\", table_format=\"df\")\n",
@@ -210,9 +214,9 @@
     "    SIRIUS_DF= SIRIUS_DF.rename(columns= {\"best_search_engine_score[2]\":\t\"TreeScore\"})\n",
     "    SIRIUS_DF= SIRIUS_DF.rename(columns= {\"best_search_engine_score[3]\":\t\"IsotopeScore\"})\n",
     "    SIRIUS_DF=SIRIUS_DF[SIRIUS_DF[\"IsotopeScore\"] > 0.0] \n",
-    "    sirius_DF_file= os.path.join(path, os.path.basename(filename)[:-6] + \"flt.csv\")\n",
+    "    sirius_DF_file= os.path.join(path, os.path.basename(filename)[:-6] + \".csv\")\n",
     "    SIRIUS_DF.to_csv(sirius_DF_file)\n",
-    "    display(SIRIUS_DF)"
+    "display(filename, SIRIUS_DF) #example dataframe"
    ]
   },
   {
@@ -236,10 +240,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
+   "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('pyopenms')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
