anootate and clean up

--- a/3_SIRIUS_CSI.ipynb
+++ b/3_SIRIUS_CSI.ipynb
@@ -23,6 +23,8 @@
    "source": [
     "import os\n",
     "import glob\n",
+    "import sys\n",
+    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import shutil"
    ]
