code cleanup Axel

--- a/5_Annotations.ipynb
+++ b/5_Annotations.ipynb
@@ -13,6 +13,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= os.path.join(\"results\", \"interim\", \"analysis\")\n",
+    "isExist= os.path.exists(path)\n",
+    "if not isExist:\n",
+    "    os.mkdir(path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,6 +43,16 @@
     "DF_features= DF_features.drop(columns=[\"charge\", \"quality\", \"id\"])\n",
     "DF_features= DF_features.fillna(0)\n",
     "DF_features[\"feature_ids\"]= [ids[1:-1].split(\",\") for ids in DF_features[\"feature_ids\"]]\n",
+    "DF_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DF_features= DF_features.reset_index()\n",
     "DF_features"
    ]
   },
@@ -62,16 +84,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FeatureMatrix= pd.read_csv(os.path.join(path, \"Matrix_Clean.csv\"), sep=\"\\t\")\n",
-    "FeatureMatrix"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,9 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FeatureMatrix.insert(0, \"GNPS_IDs\", \"\")\n",
+    "DF_features.insert(0, \"GNPS_IDs\", \"\")\n",
     "\n",
-    "for i, mz, rt in zip(FeatureMatrix.index, FeatureMatrix[\"mz\"], FeatureMatrix[\"RT\"]):\n",
+    "for i, mz, rt in zip(DF_features.index, DF_features[\"mz\"], DF_features[\"RT\"]):\n",
     "    hits = []\n",
     "    for name, GNPS_mz, GNPS_rt, in zip(GNPS[\"Compound_Name\"], GNPS[\"Precursor_MZ\"], GNPS[\"RetentionTime\"]):\n",
     "        mass_delta = (abs(GNPS_mz-mz)/GNPS_mz)*1000000.0 if GNPS_mz != 0 else np.nan\n",
@@ -106,10 +118,10 @@
     "            hit = f\"{name}\"\n",
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
-    "    FeatureMatrix[\"GNPS_IDs\"][i] = \" ## \".join(hits)\n",
+    "    DF_features[\"GNPS_IDs\"][i] = \" ## \".join(hits)\n",
     "\n",
-    "FeatureMatrix.to_csv(os.path.join(path, \"GNPS_annotated_feature_matrix.tsv\"), sep=\"\\t\", index = False)\n",
-    "FeatureMatrix"
+    "DF_features.to_csv(os.path.join(path, \"GNPS_annotated_feature_matrix.tsv\"), sep=\"\\t\", index = False)\n",
+    "DF_features"
    ]
   },
   {
@@ -125,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FeatureMatrix= FeatureMatrix[FeatureMatrix.GNPS_IDs == \"\"]\n",
+    "FeatureMatrix= DF_features[DF_features.GNPS_IDs == \"\"]\n",
     "FeatureMatrix= FeatureMatrix.drop(columns= \"GNPS_IDs\")\n",
     "FeatureMatrix= FeatureMatrix.set_index([\"RT\", \"mz\"])\n",
     "FeatureMatrix_tocsv= FeatureMatrix.reset_index()\n",
@@ -164,12 +176,8 @@
     "    pd.to_numeric(s)\n",
     "    df= df.loc[df[\"opt_global_rank\"]==1]\n",
     "    df= df.rename(columns={\"opt_global_featureId\":\"featureId\"})\n",
-    "    df_score=df.filter(regex=fr\"Score\")\n",
-    "    df_opt=df.filter(regex=fr\"opt\")\n",
-    "    cols_score= df_score.columns\n",
-    "    cols_opt= df_opt.columns\n",
-    "    df= df.drop(columns=cols_score)\n",
-    "    df= df.drop(columns= cols_opt)\n",
+    "    df= df.drop(columns=df.filter(regex=fr\"Score\").columns)\n",
+    "    df= df.drop(columns= df.filter(regex=fr\"opt\").columns)\n",
     "    df=df.reset_index()\n",
     "    list_of_df.append(df)\n",
     "DF_SIRIUS= pd.concat(list_of_df,ignore_index=True)\n",
@@ -204,12 +212,8 @@
     "    pd.to_numeric(s)\n",
     "    df= df.loc[df[\"opt_global_rank\"]==1]\n",
     "    df= df.rename(columns={\"opt_global_featureId\":\"featureId\"})\n",
-    "    df_score=df.filter(regex=fr\"Score\")\n",
-    "    df_opt=df.filter(regex=fr\"opt\")\n",
-    "    cols_score= df_score.columns\n",
-    "    cols_opt= df_opt.columns\n",
-    "    df= df.drop(columns=cols_score)\n",
-    "    df= df.drop(columns= cols_opt)\n",
+    "    df= df.drop(columns=df.filter(regex=fr\"Score\").columns)\n",
+    "    df= df.drop(columns= df.filter(regex=fr\"opt\").columns)\n",
     "    df=df.reset_index()\n",
     "    list_of_df.append(df)\n",
     "DF_CSI= pd.concat(list_of_df,ignore_index=True)\n",
@@ -220,16 +224,6 @@
     "    DF_CSI[\"featureId\"][i]= DF_CSI[\"featureId\"][i].split(\",\")\n",
     "DF_CSI.to_csv(os.path.join(\"results\", \"annotations\", \"CSI_library.tsv\"), sep=\"\\t\", index=None)\n",
     "DF_CSI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DF_features= DF_features.reset_index()\n",
-    "DF_features"
    ]
   },
   {
@@ -253,17 +247,16 @@
     "    hits1 = []\n",
     "    hits2= []\n",
     "    hits3=[]\n",
-    "    for i, id in zip(DF_features.index, DF_features[\"feature_ids\"]):\n",
-    "        for name, formula, smiles, Pred_id in zip(DF_CSI[\"name\"], DF_CSI[\"formulas\"], DF_CSI[\"smiles\"], DF_CSI[\"featureId\"]): \n",
-    "            for x,y in zip(id,Pred_id):\n",
-    "                if x==y:\n",
-    "                    hit1 = f\"{name}\"\n",
-    "                    hit2 = f\"{formula}\"\n",
-    "                    hit3= f\"{smiles}\"\n",
-    "                    if hit1 not in hits1:\n",
-    "                        hits1.append(hit1)\n",
-    "                        hits2.append(hit2)\n",
-    "                        hits3.append(hit3)\n",
+    "    for name, formula, smiles, Pred_id in zip(DF_CSI[\"name\"], DF_CSI[\"formulas\"], DF_CSI[\"smiles\"], DF_CSI[\"featureId\"]): \n",
+    "        for x,y in zip(id,Pred_id):\n",
+    "            if x==y:\n",
+    "                hit1 = f\"{name}\"\n",
+    "                hit2 = f\"{formula}\"\n",
+    "                hit3= f\"{smiles}\"\n",
+    "                if hit1 not in hits1:\n",
+    "                    hits1.append(hit1)\n",
+    "                    hits2.append(hit2)\n",
+    "                    hits3.append(hit3)\n",
     "    DF_features[\"CSI_predictions_name\"][i] = \" ## \".join(hits1)\n",
     "    DF_features[\"CSI_predictions_formula\"][i] = \" ## \".join(hits2)\n",
     "    DF_features[\"CSI_predictions_smiles\"][i] = \" ## \".join(hits3)\n",
