--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -291,11 +291,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +306,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5195814f19b3c5495ee8b750beb0560ee0827a7dd404bb814e050d6c0bc31d7a"
+   }
   }
  },
  "nbformat": 4,
