annotate CSI if formulas same as sirius pred

--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -239,36 +239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF_features.insert(0, \"CSI_predictions_name\", \"\")\n",
-    "DF_features.insert(0, \"CSI_predictions_formula\", \"\")\n",
-    "DF_features.insert(0, \"CSI_predictions_smiles\", \"\")\n",
-    "\n",
-    "for i, id in zip(DF_features.index, DF_features[\"feature_ids\"]):\n",
-    "    hits1 = []\n",
-    "    hits2= []\n",
-    "    hits3=[]\n",
-    "    for name, formula, smiles, Pred_id in zip(DF_CSI[\"name\"], DF_CSI[\"formulas\"], DF_CSI[\"smiles\"], DF_CSI[\"featureId\"]): \n",
-    "        for x,y in zip(id,Pred_id):\n",
-    "            if x==y:\n",
-    "                hit1 = f\"{name}\"\n",
-    "                hit2 = f\"{formula}\"\n",
-    "                hit3= f\"{smiles}\"\n",
-    "                if hit1 not in hits1:\n",
-    "                    hits1.append(hit1)\n",
-    "                    hits2.append(hit2)\n",
-    "                    hits3.append(hit3)\n",
-    "    DF_features[\"CSI_predictions_name\"][i] = \" ## \".join(hits1)\n",
-    "    DF_features[\"CSI_predictions_formula\"][i] = \" ## \".join(hits2)\n",
-    "    DF_features[\"CSI_predictions_smiles\"][i] = \" ## \".join(hits3)\n",
-    "DF_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "DF_features.insert(0, \"SIRIUS_predictions\", \"\")\n",
     "\n",
     "for i, id in zip(DF_features.index, DF_features[\"feature_ids\"]):\n",
@@ -289,8 +259,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "DF_features.insert(0, \"CSI_predictions_name\", \"\")\n",
+    "DF_features.insert(0, \"CSI_predictions_formula\", \"\")\n",
+    "DF_features.insert(0, \"CSI_predictions_smiles\", \"\")\n",
+    "\n",
+    "for i, id, sirius in zip(DF_features.index, DF_features[\"feature_ids\"], DF_features[\"SIRIUS_predictions\"]):\n",
+    "    hits1 = []\n",
+    "    hits2= []\n",
+    "    hits3=[]\n",
+    "    for name, formula, smiles, Pred_id in zip(DF_CSI[\"name\"], DF_CSI[\"formulas\"], DF_CSI[\"smiles\"], DF_CSI[\"featureId\"]): \n",
+    "        for x,y in zip(id,Pred_id):\n",
+    "            if (x==y)& (formula in sirius):\n",
+    "                hit1 = f\"{name}\"\n",
+    "                hit2 = f\"{formula}\"\n",
+    "                hit3= f\"{smiles}\"\n",
+    "                if hit1 not in hits1:\n",
+    "                    hits1.append(hit1)\n",
+    "                    hits2.append(hit2)\n",
+    "                    hits3.append(hit3)\n",
+    "    DF_features[\"CSI_predictions_name\"][i] = \" ## \".join(hits1)\n",
+    "    DF_features[\"CSI_predictions_formula\"][i] = \" ## \".join(hits2)\n",
+    "    DF_features[\"CSI_predictions_smiles\"][i] = \" ## \".join(hits3)\n",
+    "DF_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"FeatureMatrix_SIRIUS_CSI.csv\"), sep=\"\\t\", index= None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
