small changes GNPS lib

--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -39,20 +39,10 @@
    "source": [
     "FeatureMatrix= os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\")\n",
     "DF_features= pd.read_csv(FeatureMatrix, sep=\"\\t\")\n",
-    "DF_features=DF_features.set_index([\"mz\", \"RT\"])\n",
+    "DF_features=DF_features.set_index([\"mz\", \"RT\", \"feature_ids\"])\n",
     "DF_features= DF_features.drop(columns=[\"charge\", \"quality\", \"id\"])\n",
     "DF_features= DF_features.fillna(0)\n",
-    "DF_features[\"feature_ids\"]= [ids[1:-1].split(\",\") for ids in DF_features[\"feature_ids\"]]\n",
-    "DF_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DF_features= DF_features.reset_index()\n",
+    "DF_features.columns = DF_features.columns.str.replace(\"results/Interim/mzML/PCpeak_\", \"\")\n",
     "DF_features"
    ]
   },
@@ -74,12 +64,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= pd.read_csv(os.path.join(\"resources\", \"MS2_LIBRARYSEARCH_all_identifications.tsv\"), sep=\"\\t\", encoding=\"latin-1\")\n",
-    "df.drop(df.index[df[\"IonMode\"] == \"negative\"], inplace=True)\n",
-    "df.drop(df.index[df[\"MZErrorPPM\"] > 20.0], inplace=True)\n",
-    "GNPS=df.filter([\"Compound_Name\", \"RT_Query\", \"Precursor_MZ\"])\n",
-    "GNPS=GNPS.rename(columns= {\"RT_Query\": \"RetentionTime\"})\n",
-    "GNPS=GNPS.drop_duplicates(subset=\"Compound_Name\", keep=\"first\")\n",
+    "list= glob.glob(os.path.join(\"resources\", \"*.tsv\"))\n",
+    "for file in list:   \n",
+    "    df= pd.read_csv(file, sep=\"\\t\")\n",
+    "    df.drop(df.index[df['IonMode'] == \"negative\"], inplace=True)\n",
+    "    df.drop(df.index[df['MZErrorPPM'] > 10.0], inplace=True)\n",
+    "    df=df.filter([\"Compound_Name\", \"RT_Query\", \"Precursor_MZ\"])\n",
+    "    df=df.rename(columns= {\"RT_Query\": \"RetentionTime\"})\n",
+    "    GNPS=df.drop_duplicates(subset=\"Compound_Name\", keep='first')\n",
     "GNPS"
    ]
   },
@@ -159,6 +151,16 @@
    "metadata": {},
    "source": [
     "df_formulas will likely contain duplicate formulas that could be either isomeric, isobaric compounds, or identical compounds (with identical RT and mz). Here, we want to collapse the identical, repeating compounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DF_features= DF_features.reset_index()\n",
+    "DF_features"
    ]
   },
   {
