credits to ming

--- a/7_FBMN_SIRIUS_integration.ipynb
+++ b/7_FBMN_SIRIUS_integration.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Credits to Ming Wang for sharing the Jupyter notebook for the integration.\n",
+    "\n",
+    "###### This notebook requires a .graphml file generated from FBMN. Once you run the job, using the GNPSexport files, save the graphml file under the directory results/GNPSexport and run the following cells to add the Sirius and CSI information to the cytoscape file:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
