sirius csi integration

--- a/7_FBMN_SIRIUS_integration.ipynb
+++ b/7_FBMN_SIRIUS_integration.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "##### Credits to Ming Wang for sharing the Jupyter notebook for the integration.\n",
     "\n",
-    "###### This notebook requires a .graphml file generated from FBMN. Once you run the job, using the GNPSexport files, save the graphml file under the directory results/GNPSexport and run the following cells to add the Sirius and CSI information to the cytoscape file:"
+    "###### This notebook requires a .graphml file generated from FBMN. Once you run the job, using the GNPSexport files, save the graphml file under the directory results/GNPSexport and run the following cells to add the Sirius and CSI information to the cytoscape file (only compatible for a single file ATM):"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,13 +81,6 @@
     "\n",
     "    nx.write_graphml(G, os.path.join(\"results\", \"GNPSexport\", \"fbmn_sirius.graphml\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
