--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "import os\n",
     "import glob\n",
+    "import sys\n",
     "from pyopenms import *\n",
     "import pandas as pd"
    ]
@@ -103,7 +104,7 @@
     "if not isExist:\n",
     "    os.mkdir(path)\n",
     "\n",
-    "input_consensus= os.path.join(\"results\", \"interim\",\"Requantification\", \"consensus.consensusXML\")\n",
+    "input_consensus= os.path.join(\"results\", \"interim\", \"Preprocessing\", \"consensus.consensusXML\")\n",
     "cmap = ConsensusMap()\n",
     "ConsensusXMLFile().load(input_consensus, cmap)\n",
     "new_map= ConsensusMap(cmap)\n",
@@ -120,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `3) GNPSexport `\n",
+    "#### `3) MSMS clustering`\n",
     "\n",
     "The algorithm creates an MGF file with only the MS2 information of all files (introduce mzml files with spaces between them)\n",
     "\n",
@@ -134,12 +135,18 @@
    "outputs": [],
    "source": [
     "consensus= os.path.join(path, \"filtered.consensusXML\")\n",
-    "input_mzml_files=sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MapAligned_*.mzML\")))\n",
-    "out_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
-    "\n",
+    "input_mzml_files=sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.mzML\")))\n",
+    "out_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "spectra_clustering= GNPSMGFFile()\n",
-    "\n",
-    "spectra_clustering.run(String(consensus), [s.encode() for s in input_mzml_files], String(out_file))"
+    "spectra_clustering.store(consensus, [s.encode() for s in input_mzml_files], out_file)"
    ]
   },
   {
@@ -159,99 +166,9 @@
    "source": [
     "cmap = ConsensusMap()\n",
     "ConsensusXMLFile().load(consensus, cmap)\n",
-    "\n",
-    "# get intensities as a DataFrame\n",
-    "intensities = cmap.get_intensity_df()\n",
-    "\n",
-    "# get meta data as DataFrame\n",
-    "meta_data = cmap.get_metadata_df()\n",
-    "\n",
-    "# you can concatenate these two for a \"result\" DataFrame\n",
-    "result = pd.concat([meta_data, intensities], axis=1)\n",
-    "\n",
-    "# if you don't need labeled index, remove it (and/or save with index = False)\n",
-    "result.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "idx = 0\n",
-    "new_col = \"CONSENSUS\"  # can be a list, a Series, an array or a scalar   \n",
-    "result.insert(loc=idx, column='#CONSENSUS', value=new_col)   \n",
-    "result= result.rename(columns= {\"charge\": \"charge_cf\", \"RT\": \"rt_cf\", \"mz\": \"mz_cf\", \"quality\": \"quality_cf\", \"width\": \"width_cf\"})\n",
-    "result= result.drop([\"sequence\"], axis= 1)\n",
-    "result= result.sort_index(axis=1)\n",
-    "\n",
-    "filemeta= cmap.getColumnHeaders()\n",
-    "mapIDs = [k for k in filemeta.keys()]\n",
-    "filename= []\n",
-    "size=[]\n",
-    "label= []\n",
-    "for header in filemeta.values():\n",
-    "    files= header.filename\n",
-    "    sizes= header.size\n",
-    "    labels= header.label\n",
-    "    filename.append(files)\n",
-    "    size.append(sizes)\n",
-    "    label.append(labels)\n",
-    "\n",
-    "dict = {'id': mapIDs, 'filename': filename,'label': label,'size': size}\n",
-    "DF= pd.DataFrame(dict)\n",
-    "DF[\"id\"] = \"intensity_\"+ (DF[\"id\"]).astype(str)\n",
-    "\n",
-    "cols= result.columns\n",
-    "for col in cols:\n",
-    "    for i, path_new in enumerate(filename):\n",
-    "        if path_new== col:\n",
-    "            name= DF[\"id\"][i]\n",
-    "            result.rename(columns={col: name}, inplace=True)\n",
-    "\n",
-    "cols = result.columns\n",
-    "preordered = [\"#CONSENSUS\", \"charge_cf\", \"rt_cf\", \"mz_cf\", \"quality_cf\", \"width_cf\"]\n",
-    "new_cols = preordered + [c for c in result.columns if c not in preordered]\n",
-    "new_df = result.reindex(columns=new_cols)\n",
-    "new_df.to_csv(os.path.join(path, \"FeatureMatrix.csv\"), sep=\"\\t\", index=None)\n",
-    "new_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add the Map ID and path information from the metadata table:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata= pd.read_csv(os.path.join(\"results\", \"GNPSexport\", \"metadata.tsv\"), sep=\"\\t\", index_col=\"Unnamed: 0\")\n",
-    "metadata= metadata.filter([\"filename\", \"ATTRIBUTE_MAPID\"])\n",
-    "metadata[\"#MAP\"]= (\"MAP\")\n",
-    "metadata[\"id\"]= metadata[\"ATTRIBUTE_MAPID\"].str.extract(r\"(\\d)\")\n",
-    "metadata= metadata.drop(columns=\"ATTRIBUTE_MAPID\")\n",
-    "metadata= metadata[[\"#MAP\", \"id\", \"filename\"]]\n",
-    "metadata.to_csv(os.path.join(path, \"mapIDs.csv\"), sep=\"\\t\", index=None)\n",
-    "metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "map_file= os.path.join(path, \"mapIDs.csv\")\n",
-    "feature_file= os.path.join(path, \"FeatureMatrix.csv\")\n",
-    "merged_file= os.path.join(\"results\", \"GNPSexport\", \"FeatureQuantificationTable.txt\")\n",
-    "\n",
-    "with open(map_file, \"r\") as map_file:\n",
-    "    map_text = map_file.read()\n",
-    "\n",
-    "with open(feature_file, \"r\") as feature_file:\n",
-    "    feature_text = feature_file.read()\n",
-    "\n",
-    "with open(merged_file, \"w\") as merged_file:\n",
-    "    merged_file.write(map_text + feature_text)"
+    "out_quant= os.path.join(\"results\", \"GNPSexport\", \"FeatureQuantificationTable.txt\")\n",
+    "GNPS_matrix= GNPSQuantificationFile()\n",
+    "GNPS_matrix.store(cmap, String(out_quant))"
    ]
   },
   {
@@ -292,7 +209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13",
+   "display_name": "Python 3.10.4 ('pyopenms')",
    "language": "python",
    "name": "python3"
   },
@@ -306,11 +223,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5195814f19b3c5495ee8b750beb0560ee0827a7dd404bb814e050d6c0bc31d7a"
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
    }
   }
  },
