--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -41,7 +41,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pyopenms import *\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "import matplotlib"
    ]
   },
   {
@@ -72,11 +73,12 @@
     "interim= os.path.join(\"results\", \"interim\")\n",
     "path = os.path.join(interim, \"mzML\")\n",
     "\n",
-    "if os.path.exists(interim):\n",
+    "if os.path.exists(path):\n",
+    "    shutil.rmtree(path)\n",
     "    os.mkdir(path)\n",
-    "else: \n",
-    "    os.mkdir(interim)\n",
+    "else:    \n",
     "    os.mkdir(path)\n",
+    "\n",
     "\n",
     "input_original_files = glob.glob(os.path.join(\"data\", \"mzML\", \"*.mzML\"))\n",
     "\n",
@@ -145,9 +147,13 @@
    "outputs": [],
    "source": [
     "path = os.path.join(interim, \"Preprocessing\")\n",
+    "\n",
     "if not os.path.exists(path): # if it doesn't exist\n",
     "    os.mkdir(path) # create a path directory\n",
-    "    \n",
+    "else:\n",
+    "    shutil.rmtree(path)\n",
+    "    os.mkdir(path)\n",
+    "\n",
     "input_mzml_files = glob.glob(os.path.join(interim, \"mzML\", \"PCpeak_*.mzML\"))\n",
     "\n",
     "# 2) Mass trace detection\n",
@@ -490,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"MapAligned_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"IDMapper_*.featureXML\"))\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -561,7 +567,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13",
+   "display_name": "Python 3.10.4 ('pyopenms')",
    "language": "python",
    "name": "python3"
   },
@@ -575,11 +581,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5195814f19b3c5495ee8b750beb0560ee0827a7dd404bb814e050d6c0bc31d7a"
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
    }
   }
  },
