sirius fbmn integration

--- a/5_SIRIUS_CSI.ipynb
+++ b/5_SIRIUS_CSI.ipynb
@@ -71,12 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"Sirius\")\n",
+    "path = os.path.join(\"results\", \"interim\", \"SiriusCSI\")\n",
     "if not os.path.exists(path): # if it doesn't exist\n",
     "    os.mkdir(path) # create a path directory\n",
     "\n",
-    "feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MFD_*.featureXML\")))\n",
-    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MapAligned_*.mzML\")))\n",
+    "feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MFD_*.featureXML\")))\n",
+    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.mzML\")))\n",
     "\n",
     "feature_maps = []\n",
     "for file in feature_files:\n",
@@ -202,7 +202,7 @@
     "if not os.path.exists(path): # if it doesn't exist\n",
     "    os.mkdir(path) # create a path directory\n",
     "\n",
-    "input_SIRIUS_files = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"formulas_*.mzTab\"))\n",
+    "input_SIRIUS_files = glob.glob(os.path.join(\"results\", \"interim\", \"SiriusCSI\", \"formulas_*.mzTab\"))\n",
     "for filename in input_SIRIUS_files:\n",
     "    sirius=  pyteomics.mztab.MzTab(filename, encoding=\"UTF8\", table_format=\"df\")\n",
     "    sirius.metadata\n",
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_CSI_files = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"structures_*.mzTab\"))\n",
+    "input_CSI_files = glob.glob(os.path.join(\"results\", \"interim\", \"SiriusCSI\", \"structures_*.mzTab\"))\n",
     "for filename in input_CSI_files:\n",
     "    CSI=  pyteomics.mztab.MzTab(filename, encoding=\"UTF8\", table_format=\"df\")\n",
     "    CSI.metadata\n",
