--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_formulas= glob.glob(os.path.join(\"results\", \"Sirius\", \"formulas_*.tsv\"))\n",
+    "input_formulas= glob.glob(os.path.join(\"results\", \"SiriusCSI\", \"formulas_*.tsv\"))\n",
     "DF_SIRIUS = pd.DataFrame()\n",
     "list_of_df=[]\n",
     "for csv in input_formulas:\n",
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_structures= glob.glob(os.path.join(\"results\", \"Sirius\", \"structures_*.tsv\"))\n",
+    "input_structures= glob.glob(os.path.join(\"results\", \"SiriusCSI\", \"structures_*.tsv\"))\n",
     "DF_CSI = pd.DataFrame()\n",
     "list_of_df=[]\n",
     "for csv in input_structures:\n",
